fixed table border spacing

--- a/style.css
+++ b/style.css
@@ -130,7 +130,7 @@ header img {
     width: 90%;
     align-self: flex-end;
     line-height: 1.5rem;
-    border-spacing: 0 2em;
+    border-spacing: 0 1.2em;
 }
 
 .heading {
